--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,6 @@
-altair==5.5.0
-annotated-types==0.7.0
-attrs==24.3.0
-blinker==1.9.0
-cachetools==5.5.0
-certifi==2024.12.14
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.1
-cycler==0.12.1
-fastjsonschema==2.21.1
-fonttools==4.55.3
-gitdb==4.0.11
-GitPython==3.1.43
-idna==3.10
-imageio==2.36.1
-Jinja2==3.1.5
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_core==5.7.2
-kiwisolver==1.4.8
-lazy_loader==0.4
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.0
-mdurl==0.1.2
-narwhals==1.19.1
-nbformat==5.10.4
-networkx==3.4.2
-numpy==2.2.1
-orjson==3.10.12
-packaging==24.2
-pandas==2.2.3
-pillow==11.0.0
-platformdirs==4.3.6
-plotly==5.24.1
-protobuf==5.29.2
-pyarrow==18.1.0
-pydantic==2.10.4
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.18.0
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-pywin32==308
-referencing==0.35.1
-requests==2.32.3
-rich==13.9.4
-rpds-py==0.22.3
-scikit-image==0.25.0
-scikit-learn==1.6.0
-scipy==1.14.1
-six==1.17.0
-smmap==5.0.1
-streamlit==1.41.1
-tenacity==9.0.0
-threadpoolctl==3.5.0
-tifffile==2024.12.12
-toml==0.10.2
-tornado==6.4.2
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.3.0
-watchdog==6.0.0
+streamlit~=1.41.1
+plotly~=5.24.1
+numpy~=2.2.1
+scikit-image~=0.25.0
+matplotlib~=3.10.0
+scipy~=1.14.1
